<resources>
    <string name="app_name">CriminalIntent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="first">first</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
</resources>